<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/map"
            android:textColor="#63cf29"
            android:fontFamily=""
            android:textSize="29sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" 
            android:layout_marginRight="7dip">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/searchbar"
                android:ems="5"
                >

                <requestFocus />
            </AutoCompleteTextView>

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/autoCompleteTextView1"
                android:background="@drawable/searchicon" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
	    android:id="@+id/maplayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
		<com.baidu.mapapi.map.MapView
		    android:id="@+id/mapview"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:clickable="true"/>
		<Button
	 	    android:id="@+id/baseButton"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:layout_alignParentRight="true"
	 	    android:layout_below="@+id/searchButton"
	 	    android:text="@string/base_map" />
	 	<Button
	 	    android:id="@+id/satelliteButton"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:layout_alignParentRight="true"
	 	    android:layout_below="@+id/baseButton"
	 	    android:text="@string/satellite_map" />
	
	<!--  	<EditText
	 	    android:id="@+id/searchText"
	 	    android:inputType="text"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:layout_alignParentLeft="true"
	 	    android:layout_alignParentTop="true"
	 	    android:ems="10" >
	
	 	    <requestFocus />
	 	</EditText> -->
<!-- 	
	 	<Button
	 	    android:id="@+id/searchButton"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:layout_alignBottom="@+id/searchText"
	 	    android:layout_alignLeft="@+id/baseButton"
	 	    android:layout_alignParentTop="true"
	 	    android:text="@string/search" /> -->
	
	 	<Button
	 	    android:id="@+id/locationButton"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:layout_alignBaseline="@+id/baseButton"
	 	    android:layout_alignBottom="@+id/baseButton"
	 	    android:layout_alignParentLeft="true"
	 	    android:text="@string/location" />

	</RelativeLayout>

 </LinearLayout>
